<resources>
    <string name="app_name">Class Selection App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter a Username</string>
    <string name="loginButtonText">Login</string>
    <string name="errMessageLogin">Incorrect Login Name.  Please Retry</string>
    <string name="errMessagePassword">Incorrect Password.  Please Retry.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Phone">Phone</string>
    <string name="Birthday">Date of Birth:</string>
    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="txtDay">Day</string>
    <string name="txtMonth">Month</string>
    <string name="txtYear">Year</string>
    <string name="cert">Certificate</string>
    <string name="twoYr">Associates Degree</string>
    <string name="major">Major</string>

    <string-array name="Certificate">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>
    <string-array name="Major">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>

    <string name="btnNext">Next</string>
    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: iOS I</string>
    <string name="class2">MAD-155: Android II</string>
    <string name="class3">MAD-157: ios II</string>
    <string name="class4">MAD-257 Capstone Mobile Class</string>
    <string name="timeRb1">T/TH 12:00pm - 1:50pm</string>
    <string name="timeRb2">M/W 10:00am - 11:50am</string>
    <string name="timeRb3">T/TH 12:00pm - 1:50pm</string>
    <string name="timeRb4">T/TH 4:00pm - 5:50pm</string>
    <string name="timeRb5">f 9:00am - 12:50pm</string>
    <string name="timeRb6">M/W 12:00pm - 1:50pm</string>
    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>




</resources>
