<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dave.classselectionapp.MainClassList">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtMonth"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/spnMonth"
        android:layout_marginStart="25dp" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="172dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstName"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="54dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/LastName"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        android:layout_marginLeft="3dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtLastName"
        android:layout_marginStart="3dp" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="85dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        android:layout_marginLeft="3dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtPhone"
        android:layout_marginStart="3dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Birthday"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="10dp" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="23dp"
        android:entries="@array/Month"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/txtDay"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/txtDay"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        android:layout_marginStart="2dp" />

    <EditText
        android:id="@+id/txtDay"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toRightOf="@+id/spnMonth"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtYear"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtYear"
        android:layout_marginStart="4dp" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/txtDay"
        app:layout_constraintTop_toTopOf="@+id/txtDay"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txtCertBADTOUCH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cert"
        android:textSize="18sp"
        android:layout_marginTop="91dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="6dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_marginStart="6dp" />

    <TextView
        android:id="@+id/txtTwoYr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="245dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="61dp"
        android:text="@string/twoYr"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="377dp"
        android:layout_height="28dp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:switchMinWidth="370dp"
        android:textOff="@string/cert"
        android:textOn="@string/twoYr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCertBADTOUCH" />

    <Spinner
        android:id="@+id/spnCert"
        android:layout_width="179dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:entries="@array/Certificate"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spnDegree" />

    <Spinner
        android:id="@+id/spnDegree"
        android:layout_width="179dp"
        android:layout_height="32dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="25dp"
        android:entries="@array/Major"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <TextView
        android:id="@+id/txtMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="11dp"
        android:text="@string/major"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/spnDegree"
        app:layout_constraintTop_toBottomOf="@+id/spnDegree" />

    <TextView
        android:id="@+id/txtCert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="115dp"
        android:layout_marginTop="11dp"
        android:text="@string/cert"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="@+id/spnCert"
        app:layout_constraintTop_toBottomOf="@+id/spnCert" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
